fix(qa): update files for Wildfly to use jakarta