@@ -591,12 +591,17 @@
 
     <profile>
       <id>embedded-engine-rest</id>
-      <!-- Works only on Wildfly 26 -->
       <dependencies>
         <dependency>
           <groupId>org.wildfly.arquillian</groupId>
           <artifactId>wildfly-arquillian-container-managed</artifactId>
-          <version>1.1.0.Beta1</version>
+          <version>1.1.0.Final</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.arquillian.protocol</groupId>
+          <artifactId>arquillian-protocol-servlet-jakarta</artifactId>
+          <version>1.8.0.Final</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -617,6 +622,11 @@
               <systemPropertyVariables>
                 <projectversion>${project.parent.version}</projectversion>
               </systemPropertyVariables>
+              <argLine>
+                --add-opens java.base/java.io=ALL-UNNAMED
+                --add-opens java.base/java.lang=ALL-UNNAMED
+                --add-opens java.base/java.util=ALL-UNNAMED
+              </argLine>
             </configuration>
           </plugin>
           <plugin>
